# ar2md

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ar2md/: __init__.py  arxiv.lua  cli.py
tests/: README.md  test_cli.py
tests/ar2md-0.1.0/: index.jsonl
tests/ar2md-0.1.0/ar5iv.labs.arxiv.org/html/: 1207.0580v1.html  1207.0580v1.md
tests/ar2md-0.1.0/arxiv.org/html/: 1706.03762v7.html  1706.03762v7.md  2512.14575v1.html  2512.14575v1.md
tests/ar2md-0.1.0/arxiv.org/static/base/1.0.1/css/: arxiv-header-footer.css?v=20260626.css
tests/ar2md-0.1.0/arxiv.org/static/browse/0.3.4/css/: arxiv-html-papers-theme-20250131.css
tests/arxiv-md-0.1.0/1207.0580v1/: conversion.json  document.md
tests/arxiv-md-0.1.0/1706.03762v7/: conversion.json  document.md
tests/arxiv-md-0.1.0/2512.14575v1/: conversion.json  document.md
tests/arxiv2markdown-0.1.0/: 1207.0580v1.md  1706.03762v7.md  2512.14575v1.md
